--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "scripts": {
         "sass": "node-sass --indent-width 4 --include-path ../../.. sass/develop.scss css/develop.css && node-sass --indent-width 4 --include-path ../../.. sass/release.scss css/release.css",
         "lint": "eslint *.js",
+        "test": "npm run lint",
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
@@ -20,7 +21,8 @@
         "stb-rc": "stbsdk/rc"
     },
     "devDependencies": {
-        "spa-eslint-config": "spasdk/eslint-config"
+        "spa-eslint-config": "spasdk/eslint-config",
+        "eslint": "2.*.*"
     },
     "keywords": [
         "spa",
