correct eslint script params

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "scripts": {
         "sass": "node-sass --indent-width 4 --include-path ../../.. sass/develop.scss css/develop.css && node-sass --indent-width 4 --include-path ../../.. sass/release.scss css/release.css",
-        "lint": "eslint *.js",
+        "lint": "eslint .",
         "test": "npm run lint",
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
@@ -21,8 +21,8 @@
         "stb-rc": "stbsdk/rc"
     },
     "devDependencies": {
-        "spa-eslint-config": "spasdk/eslint-config",
-        "eslint": "2.*.*"
+        "eslint": "2.*.*",
+        "spa-eslint-config": "spasdk/eslint-config"
     },
     "keywords": [
         "spa",
