--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "dependencies": {
         "spa-component": "spasdk/component",
-        "stb-rc": "stbsdk/rc"
+        "stb-keys": "stbsdk/keys"
     },
     "devDependencies": {
         "eslint": "3.*.*",
