--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
-        "spa-component": "spasdk/component",
+        "spa-component": "1.*.*",
         "stb-keys": "stbsdk/keys"
     },
     "devDependencies": {
